<resources>
    <!--LOGIN-->
    <string name="app_name">DataPark</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open">Open Nav</string>
    <string name="close">Close Nav</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="keepMe">Keep me sign in</string>
    <string name="signin">Sign in</string>
    <string name="registerhere">You have not an account yet? Register</string>
    <string name="forpass">Forget Pass?</string>

    <!--REGISTER-->
    <string name="register">REGISTER</string>
    <string name="mail">Mail</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="allready">You already have an account? Sign in</string>

    <!--FORM-->
    <string name="cardata">Complete the fields about your vehicle</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="plate">Plate</string>
    <string name="fuel">Fuel</string>
    <string name="tanksize">Tank Size</string>
    <string name="distance">Distance</string>
    <string name="horses">Horses</string>
    <string name="notes">Note</string>
    <string name="save">Save</string>
    <string name="clean">Clear</string>

    <!--PROFILE-->
    <string name="sampleName">KIRBY MASCARPONE</string>
    <string name="sampleMail">redonditoycuqui@soymonisimo.com</string>
    <string name="profileSettings">Profile Settings</string>
    <string name="editName">New Username</string>
    <string name="editMail">New Mail</string>
    <string name="update">Update</string>
    <string name="carManager">Vehicle Manager</string>
    <string name="insertCar">Insert New Vehicle</string>

    <!--ITEM-->
    <string name="itemModel">Vehicle Model</string>
    <string name="type">Car/Motorbike</string>

    <!--MENU-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="manage">Manage Profile</string>
    <string name="car_history">New Vehicle Form</string>
    <string name="logout">Log Out</string>

    <string name="loading">Loading...</string>

    <!--Gas Stations-->
    <string name="gas_stations">Gas Stations</string>
    <string name="gas_stations_url">https://sedeaplicaciones.minetur.gob.es/ServiciosRESTCarburantes/PreciosCarburantes/EstacionesTerrestres/</string>


    <!--DGT Cameras-->
    <string name="dgt_cameras">DGT Cameras</string>
    <string name="dgt_cameras_url">https://www.dgt.es/.content/.assets/json/camaras.json</string>
    <string name="date">Date:</string>
    <string name="direction">Direction:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="province">Province:</string>
    <string name="pk">PK:</string>
</resources>