<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logimg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CB212432"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="156dp"
            android:layout_height="153dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffff"
            android:textStyle="bold|italic"></TextView>

        <EditText
            android:id="@+id/userFieldLogin"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:drawableLeft="@drawable/usericon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:hint="@string/user"
            android:paddingLeft="15dp"
            android:textColorHint="#BDBDBD"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/passFieldLogIn"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:drawableLeft="@drawable/securityicon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="#BDBDBD"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/keepmesigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#FFFBF8"
            android:text="@string/keepMe"
            android:textColor="#ffff"
            android:textStyle="italic" />

        <Button
            android:id="@+id/logButton"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btncolor"
            android:onClick="goProfile"
            android:text="@string/signin"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#3fff" />

        <TextView
            android:id="@+id/registerHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="goRegister"
            android:text="@string/registerhere"
            android:textColor="#FFFBF8" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="goRememberPass"
            android:text="@string/forpass"
            android:textColor="#FFFBF8"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>