<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logimg"
    tools:context=".profile.VehicleCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8D000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/complete_all_fields"
            android:textColor="#ffff"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/vehicle_plate"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:hint="@string/plate"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp"
            android:inputType="text|textCapWords"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/vehicle_brand"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:hint="@string/brand"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp"
            android:inputType="text|textCapWords"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/vehicle_model"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:hint="@string/model"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp"
            android:inputType="text|textCapWords"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/vehicle_fueltype"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:hint="@string/fuel"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp"
            android:inputType="text|textCapWords"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/vehicle_power"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:hint="@string/power"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp"
            android:inputType="text|textCapWords"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/vehicle_notes"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:hint="@string/notes"
            android:inputType="text|textCapWords"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textSize="14sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:inputType="text|textCapWords"
            android:orientation="horizontal">

            <Button
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btncolor"
                android:onClick="clear"
                android:text="@string/clean"
                android:textStyle="bold|italic"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="125dp"
                tools:layout_editor_absoluteX="155dp"
                tools:layout_editor_absoluteY="546dp" />

            <Button
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btncolor"
                android:onClick="save"
                android:text="@string/save"
                android:textStyle="bold|italic"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="125dp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="546dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>