<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout_profile"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view_profile"
        android:layout_gravity="start"
        ></com.google.android.material.navigation.NavigationView>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logimg"
    android:backgroundTintMode="multiply"
    tools:context=".UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CB212432"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/profile_topbackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/kirby"
                        app:layout_constraintBottom_toTopOf="@+id/userProfile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/sampleName"
                        android:textColor="#ffff"
                        android:textSize="16dp"
                        android:textStyle="bold|italic"

                        app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                        app:layout_constraintStart_toStartOf="@+id/imageProfile"
                        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

                    <TextView
                        android:id="@+id/mailProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sampleMail"
                        android:textColor="#ffff"
                        android:textSize="10dp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="@+id/userProfile"
                        app:layout_constraintStart_toStartOf="@+id/userProfile"
                        app:layout_constraintTop_toBottomOf="@+id/userProfile" />

                    <LinearLayout
                        android:layout_width="352dp"
                        android:layout_height="421dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/white_panel"
                        android:elevation="5dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mailProfile">

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical" >

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <TextView
                                        android:id="@+id/profileSettingsTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/profileSettings"
                                        android:textColor="#ffff"
                                        android:textSize="10dp"
                                        android:textStyle="italic"
                                        app:layout_constraintEnd_toEndOf="@+id/textView"
                                        app:layout_constraintStart_toStartOf="@+id/textView"
                                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                                    <EditText
                                        android:id="@+id/editNameProfileField"
                                        android:layout_width="300dp"
                                        android:layout_height="48dp"
                                        android:layout_marginTop="10dp"
                                        android:background="@drawable/btn"
                                        android:hint="@string/editName"
                                        android:drawableLeft="@drawable/usericon"
                                        android:drawablePadding="10dp"
                                        android:drawableTint="@color/white"
                                        android:paddingLeft="15dp"
                                        android:textColorHint="#BDBDBD"
                                        android:textSize="14dp"
                                        android:textStyle="italic" />

                                    <EditText
                                        android:id="@+id/editMailProfileField"
                                        android:layout_width="300dp"
                                        android:layout_height="48dp"
                                        android:layout_marginTop="10dp"
                                        android:background="@drawable/btn"
                                        android:hint="@string/editMail"
                                        android:drawableLeft="@drawable/mailicon"
                                        android:drawablePadding="10dp"
                                        android:drawableTint="@color/white"
                                        android:paddingLeft="15dp"
                                        android:textColorHint="#BDBDBD"
                                        android:textSize="14dp"
                                        android:textStyle="italic" />

                                    <Button
                                        android:id="@+id/updateProfile"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="10dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/btncolor"
                                        android:text="@string/update"
                                        android:textStyle="bold|italic" />

                                    <View
                                        android:layout_width="fill_parent"
                                        android:layout_height="2dp"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="10dp"
                                        android:background="#3fff" />

                                    <TextView
                                        android:id="@+id/carManagerTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/carManager"
                                        android:textColor="#ffff"
                                        android:textSize="10dp"
                                        android:textStyle="italic"
                                        app:layout_constraintEnd_toEndOf="@+id/textView"
                                        app:layout_constraintStart_toStartOf="@+id/textView"
                                        app:layout_constraintTop_toBottomOf="@+id/textView" />


                                    <Button
                                        android:id="@+id/insertCarButton"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="10dp"
                                        android:background="@drawable/btncolor"
                                        android:onClick="changeAct"
                                        android:text="@string/insertCar"
                                        android:textAllCaps="false"
                                        android:textStyle="bold|italic" />

                                </LinearLayout>

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/listViewLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">

                                    <ListView
                                        android:id="@+id/ListView"
                                        android:layout_width="344dp"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>
                        </ScrollView>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>